--- a/app/src/main/rust/Cargo.toml
+++ b/app/src/main/rust/Cargo.toml
@@ -17,3 +17,6 @@ anyhow = "1.0"
 tokio = { version = "1.0", features = ["full"] } # CLI server might still use tokio
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
+serde_json = "1.0"
+lazy_static = "1.4"
+chrono = "0.4"
